# mcp-terminal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  health_check.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  terminal_mcp_server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: goose_config.json  void_config.yaml
tests/: __init__.py  test_terminal_mcp_server.py
